implementado exportacao de produto

--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         }
     },
     "require" : {
-        "php" : ">=7.0"
+        "php" : ">=7.0",
+        "spatie/array-to-xml": "^2.16"
     }
 }
